--- a/lorax-templates-qubes/templates/runtime-install.tmpl
+++ b/lorax-templates-qubes/templates/runtime-install.tmpl
@@ -65,7 +65,7 @@ installpkg rpcbind
 ## required for dracut
 installpkg kbd kbd-misc
 ## required for anaconda-dracut (img-lib etc.)
-installpkg tar xz curl
+installpkg tar xz curl bzip2
 
 ## basic system stuff
 installpkg systemd-sysv systemd-units
@@ -103,7 +103,7 @@ installpkg tigervnc-server-module
 installpkg net-tools
 
 ## hardware utilities/libraries
-installpkg pciutils usbutils
+installpkg pciutils usbutils ipmitool
 installpkg mt-st smartmontools
 %if basearch != "s390x":
 installpkg hdparm pcmciautils
@@ -140,7 +140,7 @@ installpkg fpaste
 installpkg vim-minimal strace lsof dump xz less eject
 installpkg wget rsync rsh bind-utils ftp mtr vconfig
 installpkg icfg spice-vdagent
-installpkg gdisk
+installpkg gdisk hexedit sg3_utils
 
 ## yum plugins
 installpkg yum-plugin-fastestmirror yum-langpacks
