lorax: use rEFInd instead of grub2-efi for UEFI boot
The only thing we need is to boot xen.efi and pass it correct device handle -
xen.efi needs to load kernel initrd on its own (because of multiboot2 support
not done yet). That part about device handle doesn't work reliably with Grub -
"chainload" application loads the image manually to the memory and then
artificially fills the device handle. Apparently value passed sometimes isn't
valid to access other files (using Simple Filesystem Protocol).

--- a/lorax-templates-qubes/templates/runtime-install.tmpl
+++ b/lorax-templates-qubes/templates/runtime-install.tmpl
@@ -34,7 +34,7 @@ installpkg xen-hypervisor
     installpkg efibootmgr grub2-efi shim shim-unsigned
 %endif
 %if basearch in ("i386", "x86_64"):
-    installpkg grub2 grub2-tools shim grub2-efi efibootmgr biosdevname memtest86+ syslinux
+    installpkg grub2 grub2-tools shim refind efibootmgr biosdevname memtest86+ syslinux
 %endif
 %if basearch in ("ppc", "ppc64"):
     installpkg grub2 grub2-tools yaboot fbset hfsutils kernel-bootwrapper ppc64-utils
