lorax: create oem.img
The file should be placed on /dev/sda1 - partition prepared for /boot.

(cherry picked from commit 1504317f02a079b503af7c6102506576113f96a2)

--- a/lorax-templates-qubes/templates/x86.tmpl
+++ b/lorax-templates-qubes/templates/x86.tmpl
@@ -9,6 +9,7 @@ LIVEDIR="LiveOS"
 EXTRAKERNELS="extrakernels"
 %>
 <%!
+OEMDIR="OEM"
 from distutils.version import LooseVersion
 %>
 
@@ -107,3 +108,23 @@ hardlink ${KERNELDIR}/initrd.img ${BOOTDIR}
 ##        ${efigraft}
 ## runcmd isohybrid ${efihybrid} ${outroot}/images/boot.iso
 ## treeinfo images-${basearch} boot.iso images/boot.iso
+
+## make oem.img
+mkdir ${OEMDIR}
+hardlink ${BOOTDIR}/vmlinuz ${OEMDIR}
+hardlink ${BOOTDIR}/initrd.img ${OEMDIR}
+hardlink ${BOOTDIR}/xen.gz ${OEMDIR}
+install ${SYSLINUXDIR}/isolinux.bin ${OEMDIR}
+install ${SYSLINUXDIR}/vesamenu.c32 ${OEMDIR}
+install ${SYSLINUXDIR}/mboot.c32 ${OEMDIR}
+install ${configdir}/oem-syslinux.cfg ${OEMDIR}/syslinux.cfg
+install ${configdir}/boot.msg ${OEMDIR}
+install usr/share/anaconda/boot/syslinux-splash.png ${OEMDIR}/splash.png
+
+replace @VERSION@ ${product.version} ${OEMDIR}/syslinux.cfg ${OEMDIR}/*.msg
+replace @PRODUCT@ '${product.name}'  ${OEMDIR}/syslinux.cfg ${OEMDIR}/*.msg
+replace @ROOT@ 'inst.stage2=hd:LABEL=${isolabel|udev}' ${OEMDIR}/syslinux.cfg
+# bypass "chroot" enforced by Lorax parser
+install ../../../../conf/oem-kickstart.cfg ${OEMDIR}/ks.cfg
+runcmd mkdosimg ${outroot}/${OEMDIR} ${outroot}/images/oem.img
+runcmd syslinux -i ${outroot}/images/oem.img
